# FlashBangROM

./: .gitattributes  .gitignore  README.md
.github/workflows/: firmware-ci.yml  host-ci.yml  release.yml
FlashBangFirmware/: platformio.ini
FlashBangFirmware/include/: chip_probe.h  command_executor.h  command_parser.h  device_config.h  device_globals.h  device_types.h  driver_ops.h  protocol_io.h  seq_interpreter.h  sst39_ops.h  version_info.h
FlashBangFirmware/scripts/: driver_id_probe.py  dump_rom_range.py  inspect_roundtrip.py  program_pattern_range.py  protocol_smoke.py  version_info.py
FlashBangFirmware/src/: chip_probe.cpp  command_executor.cpp  command_parser.cpp  device_globals.cpp  driver_ops.cpp  hal_bus.cpp  line_crc_echo_main.cpp  main.cpp  protocol_io.cpp  seq_interpreter.cpp  sst39_ops.cpp  version_info.cpp
FlashBangStudio/: Cargo.toml  build.rs
FlashBangStudio/src/: driver_catalog.rs  gui.rs  main.rs  mock_device.rs  protocol.rs  report.rs  session.rs  tui.rs  version.rs
FlashBangStudio/src/engine/: mod.rs
Resources/: GuiLayout.html
Resources/ExternalDocs/: SST39SF_Protocol_fuer_KI.txt  W29EE011_doku_fuer_KI.md
docs/: ARCHITECTURE.md  DEV_LOG.md  DRIVER_BASED_COMMUNICATION.md  Gui.md  KNOWN_BUGS.md  MASTERPLAN.md  RELEASE_WORKFLOW.md  SST39_CHIP_PROTOCOL_NOTES.md
drivers/chips/: sst39-core.yaml  w29ee011-core.yaml  w29ee011-highspeed.yaml
firmware/: platformio.ini
host/studio/: Cargo.toml  build.rs
host/studio/src/: gui.rs  main.rs  mock_device.rs  tui.rs  verify.rs  version.rs
protocol/: flashbang-link-protocol.md
(+23 files in other folders)
