[package]
name = "flashbang-studio"
version = "0.5.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "=0.8.26"
ratatui = "=0.27.0"
crossterm = "0.27"
eframe = { version = "=0.24.1", default-features = false, features = ["default_fonts", "glow", "x11"] }
home = "=0.5.5"
webbrowser = "=0.8.12"
url = "=2.4.1"
serialport = "=4.3.0"
tinyfiledialogs = "=3.9.1"
image = { version = "=0.24.7", default-features = false, features = ["png"] }
chrono = { version = "0.4", default-features = true }
flate2 = "1"
tar = "0.4"
gif = "0.13"
